--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Dealership Review</title>
@@ -9,17 +10,78 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link href="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.css" rel="stylesheet">
     <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.js"></script>
-    <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
+    <script
+        src="https://unpkg.com/bootstrap-table@1.18.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
 
 </head>
 
-    <body>
+<body>
     <!-- Remove this line the first time you edit this file -->
-     This is the index page of your Django app!
+    <!-- This is the index page of your Django app! -->
     <!--Add a nav bar here -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom border-body" data-bs-theme="light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#" style="color: #333;">Dealership Review</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#" style="color: #333;">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/djangoapp/about" style="color: #333;">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/djangoapp/contact" style="color: #333;">Contact</a>
+                    </li>
+                    {% if not user.is_authenticated %}
+                    <!-- Non-authenticated user menu items -->
+                    <li class="nav-item">
+                        <form class="form-inline my-2 my-lg-0" action="{% url 'djangoapp:login' %}" method="post">
+                            {% csrf_token %}
+                            <input class="form-control mr-sm-2" type="text" name="username" placeholder="Username"
+                                required>
+                            <input class="form-control mr-sm-2" type="password" name="password" placeholder="Password"
+                                required>
+                            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
+                        </form>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'djangoapp:registration' %}" style="color: #333;">Sign Up</a>
+                    </li>
+                    {% else %}
+                    <!-- Authenticated user menu items -->
+                    <li class="nav-item">
+                        {% if user.is_authenticated %}
+                            <span class="nav-link" style="color: #333; font-weight: bold; text-transform: uppercase;">
+                                Welcome, {{ user.username }}
+                            </span>
+                        {% endif %}
+                    </li>
+                    
+
+                    <li class="nav-item">
+                        <form class="form-inline my-2 my-lg-0" method="get" action="{% url 'djangoapp:logout' %}">
+
+                            {% csrf_token %}
+                            <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Sign Out</button>
+                        </form>
+
+                    </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+
 
     <!--Add a dealer table here -->
 
-    </body>
+</body>
 
 </html>
