--- a/server/djangoapp/templates/djangoapp/registration.html
+++ b/server/djangoapp/templates/djangoapp/registration.html
@@ -1,11 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     {% load static %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
-    <body>
+
+<body>
     <!--Add a registration form here -->
+    <!DOCTYPE html>
+    <html lang="en">
+
+    <head>
+        <meta charset="UTF-8">
+        {% load static %}
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <title>Registration Form</title>
+    </head>
+
+    <body>
+
+        <div class="container mt-5">
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="card-header bg-primary text-white text-center">
+                            <h2>Registration Form</h2>
+                        </div>
+                        <div class="card-body">
+                            <form action="{% url 'djangoapp:registration' %}" method="post">
+                                <div class="form-group">
+                                    <label for="fname">First Name:</label>
+                                    <input type="text" class="form-control" id="fname" name="fname" required>
+                                </div>
+        
+                                <div class="form-group">
+                                    <label for="lname">Last Name:</label>
+                                    <input type="text" class="form-control" id="lname" name="lname" required>
+                                </div>
+        
+                                <div class="form-group">
+                                    <label for="username">Username:</label>
+                                    <input type="text" class="form-control" id="username" name="username" required>
+                                </div>
+                                
+                                <div class="form-group">
+                                    <label for="email">Email Address:</label>
+                                    <input type="email" class="form-control" id="email" name="email" required>
+                                </div>
+        
+                                <div class="form-group">
+                                    <label for="password">Password:</label>
+                                    <input type="password" class="form-control" id="password" name="password" required>
+                                </div>
+        
+                                <div class="form-group">
+                                    <label for="confirm_password">Confirm Password:</label>
+                                    <input type="password" class="form-control" id="confirm_password" name="confirm_password" required>
+                                </div>
+        
+                                <button type="submit" class="btn btn-primary btn-block">Register</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </body>
+
+    </html>
+
+</body>
+
 </html>
